--- a/build.gradle
+++ b/build.gradle
@@ -22,7 +22,7 @@ plugins {
 apply plugin: 'net.minecraftforge.gradle'
 apply plugin: 'org.spongepowered.mixin'
 
-version = "1.20.1." + getDate()
+version = "1.18.2." + getDate()
 group = "noppes.npcs" // http://maven.apache.org/guides/mini/guide-naming-conventions.html
 archivesBaseName = "CNPC-EpicFight-Addon"
 
@@ -37,9 +37,9 @@ minecraft {
     // stable_#            Stables are built at the discretion of the MCP team.
     // Use non-default mappings at your own risk. they may not always work.
     // Simply re-run your setup task after changing the mappings to update your workspace.
-    mappings channel: 'official', version: '1.20.1'
+    mappings channel: 'official', version: '1.18.2'
     // makeObfSourceJar = false // an Srg named sources jar is made by default. uncomment this to disable.
-    
+
     // accessTransformer = file('build/resources/main/META-INF/accesstransformer.cfg')
 	// accessTransformer = file('src/main/resources/META-INF/accesstransformer.cfg')
 
@@ -148,11 +148,11 @@ dependencies {
     // Specify the version of Minecraft to use, If this is any group other then 'net.minecraft' it is assumed
     // that the dep is a ForgeGradle 'patcher' dependency. And it's patches will be applied.
     // The userdev artifact is a special name and will get all sorts of transformations applied to it.
-    minecraft 'net.minecraftforge:forge:1.20.1-47.2.20'
+    minecraft 'net.minecraftforge:forge:1.18.2-40.2.17'
     annotationProcessor 'org.spongepowered:mixin:0.8.5:processor'
-    implementation fg.deobf('lib:CustomNPCs:1.20.1-GBPort-Unofficial-20240709')
-    implementation fg.deobf('lib:EpicFight:20.7.4')
-    implementation fg.deobf('lib:indestructible:20.6.7')
+    implementation fg.deobf('lib:CustomNPCs:1.18.2.20230803snapshot')
+    implementation fg.deobf('lib:EpicFight:18.5.24')
+    //implementation fg.deobf('lib:indestructible:1.18.2-0.3')
     //compile group: 'com.h2database', name: 'h2', version: '1.4.200'
     //extraLibs group: 'com.h2database', name: 'h2', version: '1.4.200'
     //configurations.compile.extendsFrom(configurations.extraLibs)
